# eda-o-matic

./: README.md  pyproject.toml
config/: config.json  eda.xlsx
data/: Ses_cias.csv  Ses_seguros.csv
docs/: eda-o-matic_roadmap.txt  eda_tests.xlsx
src/: __init__.py  teste.ipynb
src/analisys/: __init__.py  validation.py
src/utilities/: __init__.py  config.py  logger.py  utilities.py
